--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -29,3 +29,9 @@
 @import "../pages/speaker-list/speaker-list";
 
 @import "../pages/tutorial/tutorial";
+
+
+// mycustom pages
+@import "..\pages\circular\circular.scss";
+@import "..\pages\profile\profile.scss";
+@import "..\pages\hallticket\hallticket.scss";
