modified shcedule tabs and page to time table..

--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -32,6 +32,7 @@
 
 
 // mycustom pages
-@import "..\pages\circular\circular.scss";
-@import "..\pages\profile\profile.scss";
-@import "..\pages\hallticket\hallticket.scss";
+@import "../pages/circular/circular.scss";
+@import "../pages/profile/profile.scss";
+@import "../pages/hallticket/hallticket.scss";
+@import "../pages/timetable/timetable.scss";
