--- a/app/theme/app.variables.scss
+++ b/app/theme/app.variables.scss
@@ -23,10 +23,11 @@
 // colors so you can add, rename and remove colors as needed.
 // The "primary" color is the only required color in the map.
 // Both iOS and MD colors can be further customized if colors
-// are different per mode.
+// are different per mode.  primary:    #387ef5,rebeccapurple#cd595a #222222
 
 $colors: (
-  primary:    #387ef5,
+
+  primary:    rebeccapurple,
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
